# parking-rate-service

./: .env  .gitignore  README.md  pyproject.toml  rates.json  requirements.txt
src/be_code_challenge/: app.py
src/be_code_challenge/instance/: rates.db
src/be_code_challenge/models/: db.py
src/be_code_challenge/routes/: price.py  rates.py
src/be_code_challenge/services/: parking_rate_service.py  service_instance.py
src/be_code_challenge/utils/: helpers.py
src/instance/: rates.db
tests/: conftest.py  test_helpers.py  test_routes.py
